--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "native-base": "^2.1.5",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "native-base": "^2.1.5"
+    "react-native-router-flux": "^4.0.0-beta.31",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
