--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "native-base": "^2.1.5",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-elements": "^0.19.1",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
