--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
+  },
+  "rnpm": {
+      "assets": [
+        "./assets/fonts/"
+      ]
   }
 }
