--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "moment": "^2.22.2",
     "native-base": "^2.1.5",
     "react": "16.3.1",
     "react-native": "~0.55.2",
